--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-  
+<meta name="google-site-verification" content="v-JCzZe3zFWHcjtfT_a_PxZVfMIVJO5_NTHOhiptov8" />   
+<meta name="naver-site-verification" content="2313e9432a6ec71a5837c6840986523ae9e2134e" /> 
   
   <title>이사 업체들이 절대 안 알려주는 저렴한 견적 링크들 여기 다 모았습니다</title>
   
@@ -295,3 +295,4 @@
 
 </body>
 </html>
+
